  * Remove completely broken Glide target, which caused FTBFS.
  * Add mesa-swrast-source package, providing the source for the software
    rasteriser for libGLcore in the X server.
  * Drop tight libosmesa6 -> libgl1-mesa-swrast Depends, replace with
    shlibs:Depends.

  [ David Nusinow <dnusinow@debian.org> ]
  * New upstream version (6.4.1) (closes: #232665)
  * Merge changes from Ubuntu version 6.4.1-0ubuntu1. 
    (closes: #341479, #340168, #334742)
    + Add new files required by xorg-server GL build to mesa-swrast-source.
  * NMU to begin getting Xorg 7.0 in to Debian
  * Change libgl1-mesa-swrast Depends on libx11-6-dev to libx11-dev.
    (closes: #347205)

 -- David Nusinow <dnusinow@debian.org>  Tue, 10 Jan 2006 23:00:02 -0500

mesa (6.3.2-2) unstable; urgency=low

  * debian/rules: build only whatever needs to be build according to
    debian/control.
  * debian/libdir.map: it's usr/lib/debug not usr/lib/dbg
  * debian/rules: select optimized targets for the current host architecture
    only (thanks Michel!)
  * debian/README.build: reword some of the directions, add more info.
  * debian/control: forgot to add CPR relationships in the new packages
    (thanks Michel!)
  * debian/control: Set maintainer to pkg-mesa-devel, add myself as uploader

 -- Marcelo E. Magallon <mmagallo@debian.org>  Sun, 28 Aug 2005 14:41:15 -0600

mesa (6.3.2-1) unstable; urgency=low

  * New upstream
  * configs/debian-dri: new target
  * debian/control: add build-depends on libdrm-dev
  * debian/rules: pass SRC_DIRS instead of SUBDIRS on the command line.
    This allows for configurations to override the command line in a
    sane way.
  * configs/debian-dri: override SRC_DIRS
  * configs/debian: add -D_GNU_SOURCE (required by dri drivers)
  * debian/control, debian/rules: drop glide out of this package, it
    will be moved to the mesa-legacy package, forked from 6.2.1-7.
  * debian/drivers.map, debian/rules: take into account that some