@@ -144,73 +144,73 @@ src/mesa/array_cache/ac_context.c usr/share/mesa-source/src/mesa/array_cache
 src/mesa/array_cache/ac_context.h usr/share/mesa-source/src/mesa/array_cache
 src/mesa/array_cache/ac_import.c usr/share/mesa-source/src/mesa/array_cache
 src/mesa/array_cache/acache.h usr/share/mesa-source/src/mesa/array_cache
-src/mesa/swrast/s_aaline.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_aaline.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_aalinetemp.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_aatriangle.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_aatriangle.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_aatritemp.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_accum.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_accum.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_alpha.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_alpha.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_atifragshader.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_atifragshader.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_bitmap.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_blend.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_blend.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_buffers.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_context.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_context.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_copypix.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_depth.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_depth.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_drawpix.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_drawpix.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_feedback.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_feedback.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_fog.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_fog.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_fragprog_to_c.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_imaging.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_lines.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_lines.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_linetemp.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_logic.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_logic.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_masking.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_masking.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_nvfragprog.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_nvfragprog.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_pixeltex.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_pixeltex.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_points.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_points.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_pointtemp.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_readpix.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_span.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_span.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_spantemp.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_stencil.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_stencil.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_tcc.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_texstore.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_texture.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_texture.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_triangle.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_triangle.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_trispan.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_tritemp.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_zoom.c usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/s_zoom.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast/swrast.h usr/share/mesa-source/src/mesa/swrast
-src/mesa/swrast_setup/ss_context.c usr/share/mesa-source/src/mesa/swrast_setup
-src/mesa/swrast_setup/ss_context.h usr/share/mesa-source/src/mesa/swrast_setup
-src/mesa/swrast_setup/ss_triangle.c usr/share/mesa-source/src/mesa/swrast_setup
-src/mesa/swrast_setup/ss_triangle.h usr/share/mesa-source/src/mesa/swrast_setup
-src/mesa/swrast_setup/ss_tritmp.h usr/share/mesa-source/src/mesa/swrast_setup
-src/mesa/swrast_setup/ss_vb.h usr/share/mesa-source/src/mesa/swrast_setup
-src/mesa/swrast_setup/swrast_setup.h usr/share/mesa-source/src/mesa/swrast_setup
+src/mesa/swx11/s_aaline.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_aaline.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_aalinetemp.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_aatriangle.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_aatriangle.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_aatritemp.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_accum.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_accum.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_alpha.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_alpha.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_atifragshader.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_atifragshader.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_bitmap.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_blend.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_blend.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_buffers.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_context.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_context.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_copypix.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_depth.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_depth.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_drawpix.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_drawpix.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_feedback.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_feedback.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_fog.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_fog.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_fragprog_to_c.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_imaging.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_lines.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_lines.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_linetemp.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_logic.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_logic.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_masking.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_masking.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_nvfragprog.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_nvfragprog.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_pixeltex.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_pixeltex.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_points.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_points.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_pointtemp.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_readpix.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_span.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_span.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_spantemp.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_stencil.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_stencil.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_tcc.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_texstore.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_texture.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_texture.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_triangle.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_triangle.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_trispan.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_tritemp.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_zoom.c usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/s_zoom.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11/swx11.h usr/share/mesa-source/src/mesa/swx11
+src/mesa/swx11_setup/ss_context.c usr/share/mesa-source/src/mesa/swx11_setup
+src/mesa/swx11_setup/ss_context.h usr/share/mesa-source/src/mesa/swx11_setup
+src/mesa/swx11_setup/ss_triangle.c usr/share/mesa-source/src/mesa/swx11_setup
+src/mesa/swx11_setup/ss_triangle.h usr/share/mesa-source/src/mesa/swx11_setup
+src/mesa/swx11_setup/ss_tritmp.h usr/share/mesa-source/src/mesa/swx11_setup
+src/mesa/swx11_setup/ss_vb.h usr/share/mesa-source/src/mesa/swx11_setup
+src/mesa/swx11_setup/swx11_setup.h usr/share/mesa-source/src/mesa/swx11_setup
 src/mesa/tnl/t_array_api.c usr/share/mesa-source/src/mesa/tnl
 src/mesa/tnl/t_array_api.h usr/share/mesa-source/src/mesa/tnl
 src/mesa/tnl/t_array_import.c usr/share/mesa-source/src/mesa/tnl
